Revision history for Test-Class-Moose

0.07
        - Allow plans in methods. See #84046 in RT queue (Steffen W)
        - Convert to Dist::Zilla
        - Runtests returns $self.

0.06    March 17, 2013
        - Fix the MANIFEST again. That's it. After this I'm switching to
          Dist::Zilla.

0.05    March 17, 2013
        - Even if attributes start with test_, they cannot be test methods.
        - Add AutoUse to the MANIFEST :/

0.04    March 17, 2013
        - Fix test inheritance bug.

0.03    March 16, 2013
        - Add Test::Class::Moose::Role::AutoUse (automatically loads your
          actual classes)

0.02    January 29, 2013
        - Add class/method skipping. 
        - Rename almost every overrideable method to /^test_/.
        - Add a time reporting class. You can now fetch real, user and system
          time for each class or test method.
        - Fix for errors when no test methods found (they should be skipped -
          beresfordt)
        - Don't use a bare qw() for parens (reported on github by beresfordt)
        - Make sure we have hi-res time reporting
        - Move statistics gathering into its own classes
        - Add include/exclude test method filtering
        - Skip a test class if we don't find any test methods
        - Most attributes pushed into Test::Class::Moose::Config
        - Added "randomize" attribute per Udo Oji.

0.01    December 18, 2012
        - Test::Class + Moose