@@ -1,6 +1,8 @@
 Revision history for Test-Class-Moose
 
 0.07
+        - Rename test_reporting() to test_report()
+        - Rename ::Reporting classes to ::Report
         - Allow plans in methods. See #84046 in RT queue (Steffen W)
         - Convert to Dist::Zilla
         - Runtests returns $self.
